--- a/Monfichier2.html
+++ b/Monfichier2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <h1>Coucou, document </h1>
-   <h2>Coucou, document </h2>
+   <h2><color=red>Coucou, document </color></h2>
    
 </body>
 </html>
