changement de couleur de texte et de background

--- a/Monfichier2.html
+++ b/Monfichier2.html
@@ -4,10 +4,21 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document 2</title>
+   <style>
+
+      body {
+        background-color: #e6ebef;
+        color: goldenrod;
+      }
+      p {
+         color: red;
+      }
+   </style>
 </head>
 <body>
-   <h1>Coucou, document </h1>
-   <h2><color=red>Coucou, document </color></h2>
+   <h2>le titre est </h2>
+   <p>Coucou !</p>
+    
    
 </body>
 </html>
